2001-11-01  Michael Meeks  <michael@ximian.com>

	* tests/control/test-control.c (main): use
	bonobo_debug_shutdown.

	* tests/test-sensitivity.c (main): ditto

	* tests/test-reparent.c (main): ditto

	* tests/test-focus.c (main): ditto.

2001-10-31  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-socket.c (bonobo_socket_dispose):
	give Gtk+ a helping hand with propagating destroys to
	in-proc plugs.

	* tests/control/test-control.c (main): upd.
	(run_tests, create_test, create_frame),
	(create_control, destroy_test, mainloop_for): impl.

2001-10-30  jacob berkman  <jacob@ximian.com>

	* bonobo/bonobo-control.c (ORBIT2_INTERNAL_API): define this so
	that we build with current orbit

	* bonobo/libbonoboui-2.0.pc.in (Cflags): 
	* bonobo/Makefile.am (libbonoboincludedir): 
	* Makefile.am (libincludedir): use libbonoboui-2.0 rather than
	gnome-2.0

2001-10-31  Michael Meeks  <michael@ximian.com>

	* configure.in: add test-control.c

	* tests/control/test-control.c: add.

	* tests/control/Makefile.am: add.

2001-10-31  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-plug.c (bonobo_plug_destroy_event): hack the
	mjmess out - this is never called it seems.
	
	* bonobo/bonobo-socket.c
	(bonobo_socket_focus_in),
	(bonobo_socket_focus_out): fix broken focus chaining.

	* bonobo/bonobo-widget.c
	(bonobo_widget_finalize): re-impl.
	(bonobo_widget_dispose): impl.
	(bonobo_widget_class_init): hook.

	* bonobo/bonobo-ui-toolbar-control-item.c
	(impl_finalize, impl_dispose): re-impl.
	(class_init): hook.
	(bonobo_ui_toolbar_control_item_new): upd.

	* tests/test-ui.c (main): give a relative path for std-ui.xml

2001-10-31  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar-control-item.c
	(set_control_property_bag_value): don't set things on a NULL bag.

	* bonobo/bonobo-ui-util.c
	(bonobo_ui_util_get_ui_fname): fix silly.

	* bonobo/bonobo-control.c
	(bonobo_control_set_transient_for): re-impl, fix leak.

2001-10-30  Michael Meeks  <michael@ximian.com>
